# repo-duplicate-detector

./: .gitignore  .pylintrc  CHANGELOG.md  CONTIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: analyze_ecosystem.py  find_orphaned_forks.py  find_similar_repos.py
src/repo_duplicate_detector/: config.py  exceptions.py  fetcher.py  init.py  matcher.py  metrics.py  utils.py
tests/: conftest.py  test_fetcher.py  test_matcher.py  test_metrics.py
