[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-duplicate-detector"
version = "0.1.0"
description = "Detect duplicate and similar GitHub repositories"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "pakistanimoon", email = "rajaimranqamer@gmail.com"},
]
keywords = ["github", "duplicate-detection", "repository-analysis", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/pakistanimoon/repo-duplicate-detector"
Documentation = "https://github.com/pakistanimoon/repo-duplicate-detector/wiki"
Repository = "https://github.com/pakistanimoon/repo-duplicate-detector"
"Bug Tracker" = "https://github.com/pakistanimoon/repo-duplicate-detector/issues"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/repo_duplicate_detector --cov-report=html --cov-report=term-missing"
